--- a/docker/foundry/Dockerfile
+++ b/docker/foundry/Dockerfile
@@ -3,8 +3,6 @@ ADD rust-build.tar.gz /root/
 WORKDIR /root/rust-build
 RUN cargo build --release
 
-RUN curl -L https://foundry.paradigm.xyz | bash && /root/.foundry/bin/foundryup
-
 From --platform=$TARGETPLATFORM ubuntu
 COPY --from=builder /root/rust-build/target/release/judger /bin/
 # COPY --from=builder /root/.foundry /root/.foundry
@@ -17,7 +15,8 @@ ADD app.tar.gz /
 RUN echo '#!/bin/bash \njudger server "$@"' > /usr/bin/server && chmod +x /usr/bin/server
 RUN echo '#!/bin/bash \njudger client "$@"' > /usr/bin/client && chmod +x /usr/bin/client
 
-# RUN cd /app/ && git commit -am"" && forge install OpenZeppelin/openzeppelin-contracts
 
 WORKDIR /app
+
+RUN /bin/judger init
 CMD server
