--- a/log4rs.yaml
+++ b/log4rs.yaml
@@ -16,7 +16,7 @@ appenders:
       pattern: "{d(%Y-%m-%d %H:%M:%S %Z)(utc)} {h({l})} {m} {n}"
 # 对全局 log 进行配置
 root:
-  level: trace
+  level: info
   appenders:
     - stdout
     - file
